# neml2-custom-lib-template

./: CMakeLists.txt  README.md  test.i
.github/: test.yml
.github/workflows/: test.yml
include/: MyModel.h
src/: MyModel.cxx
